force-app/main/default/objects/Booking__c/Booking__c.object-meta.xml
<CustomObject>
    <description>Represents vehicle booking transaction.</description>
    <label>Booking</label>
    <nameField>
        <displayFormat>B-{YYYYMM}-{0000}</displayFormat>
        <label>Booking ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bookings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>