force-app/main/default/objects/Booking__c/fields/Airline_Membership_Number__c.field-meta.xml
<CustomField>
    <fullName>Airline_Membership_Number__c</fullName>
    <label>Airline Membership Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>