force-app/main/default/objects/Booking__c/fields/Fleet_Vehicle_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Vehicle_External_ID__c</fullName>
    <formula>Fleet_Vehicle__r.External_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fleet Vehicle External ID</label>
    <type>Text</type>
</CustomField>