force-app/main/default/objects/Booking__c/fields/Pick_Up_Location_Name__c.field-meta.xml
<CustomField>
    <fullName>Pick_Up_Location_Name__c</fullName>
    <label>Pick Up Location Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>