force-app/main/default/objects/Booking__c/fields/RAVG_Retail_Membership_Number__c.field-meta.xml
<CustomField>
    <fullName>RAVG_Retail_Membership_Number__c</fullName>
    <label>RAVG Retail Membership Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>