force-app/main/default/objects/Booking__c/fields/Total_Quoted_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Quoted_Price__c</fullName>
    <label>Total Quoted Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>